Fix all errors, Time for fixing bugs