@@ -11,6 +11,7 @@ import net.minecraft.entity.monster.EntityWitch;
 import net.minecraft.util.math.BlockPos;
 import net.minecraft.util.math.MathHelper;
 import net.minecraft.world.World;
+import net.minecraft.world.biome.Biome;
 import net.minecraft.world.biome.Biome.SpawnListEntry;
 import net.minecraft.world.gen.structure.MapGenStructure;
 import net.minecraft.world.gen.structure.MapGenStructureIO;
@@ -83,7 +84,7 @@ public class MapGenNibiruJungleTemple extends MapGenStructure
 
         if (i == k && j == l)
         {
-            BiomeGenBase biomegenbase = this.worldObj.getWorldChunkManager().getBiomeGenerator(new BlockPos(i * 16 + 8, 0, j * 16 + 8));
+            Biome biomegenbase = this.worldObj.getBiomeProvider().getBiome(new BlockPos(i * 16 + 8, 0, j * 16 + 8));
 
             if (biomegenbase == null)
             {
@@ -105,11 +106,11 @@ public class MapGenNibiruJungleTemple extends MapGenStructure
 
     public boolean canMobSpawn(BlockPos pos)
     {
-        StructureStart structurestart = this.func_175797_c(pos);
+        StructureStart structurestart = this.getStructureAt(pos);
 
         if (structurestart != null && structurestart instanceof Start && !structurestart.getComponents().isEmpty())
         {
-            StructureComponent structurecomponent = structurestart.getComponents().getFirst();
+            StructureComponent structurecomponent = structurestart.getComponents().get(0);
             return structurecomponent instanceof StructureNibiruJungleTemplePieces.JungleTemple;
         }
         else
@@ -131,7 +132,7 @@ public class MapGenNibiruJungleTemple extends MapGenStructure
         {
             super(chunkX, chunkZ);
             MPLog.debug("Generate jungle temple at %s %s", chunkX * 16, chunkZ * 16);
-            BiomeGenBase biomegenbase = world.getBiomeGenForCoords(new BlockPos(chunkX * 16 + 8, 0, chunkZ * 16 + 8));
+            Biome biomegenbase = world.getBiome(new BlockPos(chunkX * 16 + 8, 0, chunkZ * 16 + 8));
 
             if (biomegenbase == MPBiomes.INFECTED_JUNGLE)
             {
